<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            >

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/app_name"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans_extrabold"
                android:text="@string/registration"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appName" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/name"
                app:helperTextEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/heading"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menu"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/i_am_a"
                app:layout_constraintTop_toBottomOf="@id/nameContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"
                >

                <AutoCompleteTextView
                    android:id="@+id/menuView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pinContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/pin_code"
                app:helperTextEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/menu"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="25dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="6"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/pinLoading"
                android:layout_width="15dp"
                android:layout_height="15dp"
                app:layout_constraintTop_toTopOf="@id/pinContainer"
                app:layout_constraintBottom_toBottomOf="@id/pinContainer"
                app:layout_constraintEnd_toEndOf="@id/pinContainer"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:elevation="5dp"
                android:visibility="invisible"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/hospitalMenu"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hospital"
                android:enabled="false"
                app:layout_constraintTop_toBottomOf="@id/pinContainer"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="5dp"
                >

                <AutoCompleteTextView
                    android:id="@+id/hospitalMenuView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/newHospital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:layout_constraintTop_toBottomOf="@id/hospitalMenu"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/add_hospital_txt"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/borderGrey"
                android:focusable="true" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSubmit"
                style="@style/Widget.AppTheme.MaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/newHospital"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/submit"
                android:padding="15dp"
                android:layout_marginTop="20dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>