<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dashboard"
    tools:context=".Dashboard"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:title="@string/app_name"
        android:hapticFeedbackEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingVertical="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/app_name"
                android:fontFamily="@font/open_sans_extrabold"
                android:textColor="@color/accent"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                />


            <ImageButton
                android:id="@+id/accBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_baseline_account_circle_24"
                android:backgroundTint="@android:color/transparent"
                app:tint="@color/accent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>


    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--        android:id="@+id/topBar"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        android:paddingHorizontal="20dp"-->
    <!--        android:paddingVertical="20dp">-->

    <!--        <TextView-->
    <!--            android:id="@+id/appName"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            app:layout_constraintTop_toTopOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            android:text="@string/app_name"-->
    <!--            android:fontFamily="@font/open_sans_extrabold"-->
    <!--            android:textColor="@color/accent"-->
    <!--            android:textSize="18sp"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
    <!--            />-->

    <!--        <ImageButton-->
    <!--            android:id="@+id/accBtn"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            app:layout_constraintTop_toTopOf="parent"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
    <!--            android:src="@drawable/ic_baseline_account_circle_24"-->
    <!--            android:tint="@color/accent"-->
    <!--            android:backgroundTint="@android:color/transparent"-->
    <!--            />-->

    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolBarId"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="20dp"
        >

        <TextView
            android:id="@+id/greetingMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/hello"
            android:fontFamily="@font/open_sans"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/greetingMain"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/doctor"
            android:fontFamily="@font/open_sans_extrabold"
            android:textSize="32sp"
            android:textColor="@color/accent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/greeting"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/search_icon"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        android:background="@drawable/search_bg"
        app:placeholderText="Search"
        >

        <AutoCompleteTextView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:background="@drawable/search_bg"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingBottom="20dp"
        android:clipToPadding="false"
        >

        <TextView
            android:id="@+id/recentHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Recent Patients"
            android:fontFamily="@font/open_sans"
            android:textSize="16sp"
            />

        <HorizontalScrollView
            android:id="@+id/hsvPatients"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            app:layout_constraintTop_toBottomOf="@id/recentHeading"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:scrollbars="none"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPatients"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

            </androidx.recyclerview.widget.RecyclerView>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/ptStatsHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/hsvPatients"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Patient Stats"
            android:fontFamily="@font/open_sans"
            android:textSize="16sp"
            android:layout_marginTop="30dp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ptStatsHeading"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:padding="20dp"
            android:background="@drawable/stats_card_bg"
            android:elevation="3dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/criticalPatLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/midPatientsLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingHorizontal="10dp"
                android:clipToPadding="false"
                >

                <TextView
                    android:id="@+id/criticalPatients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="12"
                    android:textSize="40sp"
                    android:fontFamily="@font/open_sans_extrabold"
                    android:textColor="@color/clrError"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/criticalPatients"
                    app:layout_constraintStart_toStartOf="@id/criticalPatients"
                    app:layout_constraintEnd_toEndOf="@id/criticalPatients"
                    android:text="Critical"
                    android:fontFamily="@font/open_sans"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/midPatientsLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/criticalPatLayout"
                app:layout_constraintEnd_toStartOf="@id/recPatientsLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingHorizontal="20dp"
                android:clipToPadding="false"
                >

                <TextView
                    android:id="@+id/midPatients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="18"
                    android:textSize="40sp"
                    android:fontFamily="@font/open_sans_extrabold"
                    android:textColor="@color/clrAlert"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/midPatients"
                    app:layout_constraintStart_toStartOf="@id/midPatients"
                    app:layout_constraintEnd_toEndOf="@id/midPatients"
                    android:text="Medium"
                    android:fontFamily="@font/open_sans"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/recPatientsLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/midPatientsLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingHorizontal="10dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                >

                <TextView
                    android:id="@+id/recoveredPatients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="34"
                    android:textSize="40sp"
                    android:fontFamily="@font/open_sans_extrabold"
                    android:textColor="@color/clrSuccess"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/recoveredPatients"
                    app:layout_constraintStart_toStartOf="@id/recoveredPatients"
                    app:layout_constraintEnd_toEndOf="@id/recoveredPatients"
                    android:text="Recovered"
                    android:fontFamily="@font/open_sans"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:contentDescription="Add Details"
            app:tint="@color/white"
            app:srcCompat="@drawable/ic_baseline_add_24"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>